corrected body overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,7 +14,7 @@
 }
 
 body{
-    overflow-x: hidden;
+    overflow-x: hidden !important;
     // background-image: url(/images/bg-tablet-pattern.svg);
     // background-position: 50vw -10px;
     // background-position: top right;
